Change Log for OpenXava project
===============================

- Fix: When typing a wrong date it is modified to a correct one instead of keeping it as wrong date.
- Brazilian Portuguese translation for labels and messages. 
- Fix: Unneeded final spaces in English and Spanish i18n messages files. 
- Fix: Error in browser developer tools console: downloadable font: download failed.
- Fix: Hiding the same action several times shows an error when saving the entity afterwards.
- Fix: Parameters in URL are not passed after login.
- Fix: Security risk when a module of the application uses UrlParameters controller.
- Actions setSchema and setUser removed from UrlParameters controller. 
- Fix: Too generic error when no connection to database: cannot be null when 'hibernate.dialect' not set.
- Fix: Automatic labels for list column headers for references has incorrect order in Chinese.
- Doc for put in your project modified versions of JSPs from OpenXava to customizing project behavior. 
- Doc for deploying in Tomcat modified to include instructions for Tomcat 10.
- Fix: View with @Files/@File generates a JavaScript error dialog when language is Catalan.
- Fix: Time part not formatted correctly in DateTimeSeparatedCalendar editor with Serbian and Java 8.
- Fix: Time part distorted on modify it in a @DateTime property using DateTimeSeparatedCalendar editor.
- Driver versions in doc and new projects upgraded for PostgreSQL, Oracle, AS/400, Firebird.
- Embedded Tomcat used in development upgraded to 9.0.70.
- Hibernate upgraded to 5.6.14.Final.
- Zero downtime deployment(ZDD) and horizontal scaling support.
- New XFileItem in util package to use as a serializable alternative to FileItem from Apache FileUpload.
- Session data size reduced to a great extent.  
- Fix: User redirected to list mode from detail when an action execution is sent to a different server.
- Fix: Import CSV/Excel failed to work when using cluster of sever instances.